--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
       <h1>Paul</h1>
       <h2>He/Him/His</h2>
     </header>
-    <h2>Pittsburgh</h2>
+    <h2>Pittsburgh, PA</h2>
     <section>
       <div class="facts">
         <ul>
           <div>
-            <h2>Three facts about me:</h2>
+            <h2>Unique facts about me:</h2>
             <li>I speak 5 languages</li>
             <li>I played semi-pro soccer</li>
             <li>The movie "Queen of Katwe" was filmed right where I lived</li>
