added a nav bar

--- a/about.html
+++ b/about.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <header>
+	 <nav>
+      		<a href="/">Home</a>
+      		<a href="/about">About</a>
+   	 </nav>
       <h1>Paul</h1>
       <h2>He/Him/His</h2>
     </header>
