--- a/about.html
+++ b/about.html
@@ -67,5 +67,39 @@
       </div>
     </section>
     <img src="OIP.jpeg" alt="Queen of Katwe poster" loading="lazy"/>
+    <form action="action.php" method="post">
+      <div>
+        <label for="name">Name: </label>
+        <input type="text" id="name" name="name" required>
+      </div>
+      <div>
+        <label for="email">Email: </label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div>
+        <label for="dob">Date of Birth</label>
+        <input type="date" id="dob" name="dob" required>
+      </div>
+      <div>
+        <label for="passowrd">Password</label>
+        <input type="password" id="password" name="password" minlength="8" maxlength="16" required>
+      </div>
+      <div>
+        <fieldset>
+          <legend>Gender</legend>
+          <label>
+            <input type="radio" name="gender" value="male" required> Male
+          </label>
+  
+          <label>
+            <input type="radio" name="gender" value="female"> Female
+          </label>
+  
+          <label>
+            <input type="radio" name="gender" value="non_binary"> Non-binary/Others
+          </label>
+        </fieldset>
+      </div>
+    </form>
   </body>
 </html>
